chore: add reproducer